# Barbershop

./: CMakeLists.txt  README.md
Entities/: Barber.cpp  Barber.h  Customer.cpp  Customer.h
Initializer/: Controller.cpp  Controller.h  main.cpp
